Edit readme, update gemfile

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,54 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Title: Unknown
+Framework: Rails 4.0
 
-Things you may want to cover:
+== Getting Started
+* Run `bundle install`
+* Run `rake db:schema:load` for <b>NEW</b> installs only.
+* Run `rake db:migrate` to update database between pulls.
 
-* Ruby version
+The following gems require configuration: rspec, capybara, devise
 
-* System dependencies
+=== RSpec
+* `rails generate rspec:install'
+* `require "rails_helper"` goes at the top of new _spec files.
+* Further reading: Github[https://github.com/rspec/rspec-rails] - Documentation[https://relishapp.com/rspec]
 
-* Configuration
+=== Capybara
+* `require 'capybara/rails'` to rails_helper.rb
+* Create a features folder in the spec directory (spec/features)
+* Further reading: Github[https://github.com/jnicklas/capybara] - Documentation[http://www.rubydoc.info/github/jnicklas/capybara/master/Capybara/Node]
 
-* Database creation
+=== Devise
+* `rails generate devise:install`
+* in `config/environments/development.rb` add: 
+** `config.action_mailer.default_url_options = { host: 'localhost', port: 3000 }`
+* Add this to controllers where authentication is required: `before_action :authenticate_user!`
+* Further reading: Github[https://github.com/plataformatec/devise] - Documentation[http://devise.plataformatec.com.br/]
 
-* Database initialization
+=== Pundit
+* Add the following to application_controller.rb:
+** `include Pundit` at the top of the class
+* Create a policies folder in the app directory (app/policies)
+* Documentation[https://github.com/elabs/pundit]
 
-* How to run the test suite
+=== Paperclip
+* Ensure Imagemagick is installed on your computer. Use your terminal install command (e.g. brew install imagemagick).
+* Add the following to `config/environments/development.rb`:
+** `Paperclip.options[:command_path] = "/usr/local/bin/"`
+* Add the following to the appropriate model:
+`has_attached_file :avatar, :styles => { :medium => "300x300>", :thumb => "100x100>" }, :default_url => "/images/:style/missing.png"
+  validates_attachment_content_type :avatar, :content_type => /\Aimage\/.*\Z/`
 
-* Services (job queues, cache servers, search engines, etc.)
+=== Optional Gems
 
-* Deployment instructions
+`guard-rspec` simply runs your specs automatically in the background. 
+* `guard init rspec` to configure
+* Run in it's own terminal in your rails directory, as you would a rails server.
+* `bundle exec guard` (or `guard`) to start
+* Documentation[https://github.com/guard/guard#readme]
 
-* ...
+`simplecov` simply measures the amount of test coverage for our entire app. 
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
